--- a/core/src/main/resources/templates/core/management_eco_new.html
+++ b/core/src/main/resources/templates/core/management_eco_new.html
@@ -49,13 +49,28 @@
                         </div>
                     </a>
                 </div>
-                <div class="button-edit">
+                <div class="button-edit" style="display: flex; gap: 5px">
                     <div class="button-text id">№[[${econew.id}]]</div>
                     <a href="#editEcoNewsModal" editEcoNewsForm id="editEcoNewsModalBtn"
                        data-toggle="modal" th:onclick="editBtnDisabled()">
                         <img src="/img/habit_advices_dark.png">
                     </a>
+                    <div th:if="${econew.hidden eq false}">
+                        <a class="edit eHideBtn" style="color: #FF9310" th:href="@{/management/eco-news/hide(id=${econew.id})}"><i
+                                class="material-icons" data-toggle="tooltip" th:title="#{greenCity.pages.hide}">&#xE8F5;</i></a>
+                    </div>
+                    <div th:if="${econew.hidden eq true}">
+                        <a class="edit eShowBtn" style="color: #FF9310" th:href="@{/management/eco-news/show(id=${econew.id})}"><i
+                                class="material-icons" data-toggle="tooltip" th:title="#{greenCity.pages.show}">&#xE8F4;</i></a>
+                    </div>
+                    <a class="delete eDelBtn" style="color: #E02116" data-toggle="modal"
+                       th:href="@{/management/eco-news/delete(id=${econew.id})}"><i class="material-icons"
+                                                                                    data-toggle="tooltip"
+                                                                                    th:title="#{greenCity.pages.delete}">&#xE872;</i></a>
                 </div>
+            </div>
+            <div style="margin-top: 20px" th:if="${econew.hidden eq true}">
+                <h4 style="color: #B21D15; text-align: center">[[#{greenCity.pages.popup.hidden.EcoNews}]]</h4>
             </div>
             <div class="tags">
                 <div class="tags-item ng-star-inserted" th:each="tag, iterStatus :${econew.tags}"
@@ -177,6 +192,74 @@
                             <input type="submit" class="btn btn-info btn-primary"
                                    th:value="#{greenCity.pages.popup.save.}"
                                    id="submitEditBtn">
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+
+        <div class="modal fade" id="deleteEcoNewsModal">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <form id="deleteEcoNewsForm">
+                        <div class="modal-header">
+                            <h4 class="modal-title">[[#{greenCity.places.page.delete.ecoNews}]]</h4>
+                            <button aria-hidden="true" class="close" data-dismiss="modal" type="button">&times;</button>
+                        </div>
+                        <div class="modal-body">
+                            <p>[[#{greenCity.pages.popup.delete.h2}]]</p>
+                            <p class="text-warning"><small>[[#{greenCity.pages.popup.delete.all.h2}]]</small></p>
+                        </div>
+                        <div class="modal-footer">
+                            <input class="btn btn-default btn-tertiary" data-dismiss="modal" type="button"
+                                   th:value="#{greenCity.pages.popup.cancel.}">
+                            <a class="btn btn-remove" href="" id="deleteOneSubmit">
+                                <div>[[#{greenCity.pages.delete}]]</div>
+                            </a>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <div class="modal fade" id="hideEcoNewsModal">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <form id="hideEcoNewsForm">
+                        <div class="modal-header">
+                            <h4 class="modal-title">[[#{greenCity.places.page.hide.ecoNews}]]</h4>
+                            <button aria-hidden="true" class="close" data-dismiss="modal" type="button">&times;</button>
+                        </div>
+                        <div class="modal-body">
+                            <p>[[#{greenCity.pages.popup.hide.h2}]]</p>
+                        </div>
+                        <div class="modal-footer">
+                            <input class="btn btn-default btn-tertiary" data-dismiss="modal" type="button"
+                                   th:value="#{greenCity.pages.popup.cancel.}">
+                            <a class="btn btn-remove" href="" id="hideOneSubmit">
+                                <div>[[#{greenCity.pages.hide}]]</div>
+                            </a>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <div class="modal fade" id="showEcoNewsModal">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <form id="showEcoNewsForm">
+                        <div class="modal-header">
+                            <h4 class="modal-title">[[#{greenCity.places.page.show.ecoNews}]]</h4>
+                            <button aria-hidden="true" class="close" data-dismiss="modal" type="button">&times;</button>
+                        </div>
+                        <div class="modal-body">
+                            <p>[[#{greenCity.pages.popup.show.h2}]]</p>
+                        </div>
+                        <div class="modal-footer">
+                            <input class="btn btn-default btn-tertiary" data-dismiss="modal" type="button"
+                                   th:value="#{greenCity.pages.popup.cancel.}">
+                            <a class="btn btn-remove" href="" id="showOneSubmit">
+                                <div>[[#{greenCity.pages.show}]]</div>
+                            </a>
                         </div>
                     </form>
                 </div>
