Complete create event page

--- a/core/src/main/resources/templates/core/fragments/modals/edit_event_modal.html
+++ b/core/src/main/resources/templates/core/fragments/modals/edit_event_modal.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Add Event Modal</title>
+    <title>Edit Event Modal</title>
     <link rel="icon" type="image/x-icon" th:href="@{/img/favicon.ico}"/>
     <link rel="stylesheet" th:href="@{/css/header.css}">
     <link rel="stylesheet" th:href="@{/css/footer.css}">
@@ -78,7 +78,7 @@
                     <input type="button" class="btn btn-default btn-tertiary" data-dismiss="modal"
                            th:value="#{greenCity.pages.popup.cancel.}">
                     <input type="submit" class="btn btn-info btn-primary" th:value="#{greenCity.pages.popup.save.}"
-                           id="submitEditBtn">
+                           id="submitEditBtn" >
                 </div>
             </form>
         </div>
