--- a/core/src/main/resources/templates/core/fragments/image-upload.html
+++ b/core/src/main/resources/templates/core/fragments/image-upload.html
@@ -9,11 +9,11 @@
     </div>
 
     <div id="proposedImagesContainer" class="mb-3">
-        <h4>Proposed Images</h4>
+        <h4>[[#{greenCity.imageUpload.proposed}]]</h4>
         <div id="proposedImages" class="preview-container">
         </div>
     </div>
-    <h4>Preview</h4>
+    <h4>[[#{greenCity.imageUpload.preview}]]</h4>
     <div id="previewContainer" class="preview-container mb-3"></div>
     <div id="uploadImagesErrorMessage" class="error mb-3"></div>
 </div>
