--- a/core/src/main/resources/templates/core/management_create_event.html
+++ b/core/src/main/resources/templates/core/management_create_event.html
@@ -11,12 +11,12 @@
     <script th:src="@{/management/events/imageUpload.js}"></script>
     <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script th:src="@{/management/localization/buttonsAJAX.js}"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script th:src="'https://maps.googleapis.com/maps/api/js?key=' + ${googleMapApiKey} + '&libraries=places&language=uk&region=UA'"></script>
     <script th:src="@{/management/events/confirmationModal.js}"></script>
-    <script th:src="@{/management/localization/buttonsAJAX.js}"></script>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/5.1.0/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/5.1.0/js/bootstrap.bundle.min.js"></script>
     <style>
@@ -60,7 +60,7 @@
 <div id="header" th:insert="core/header"></div>
 <div class="container" style="margin-top:5rem">
     <div class="row mb-5">
-        <a href="#" id="goBackButton" class="btn btn-secondary">Go Back</a>
+        <a href="#" id="goBackButton" class="btn btn-secondary">[[#{greenCity.pages.popup.goback.}]]</a>
     </div>
     <div class="row mb-4">
         <h2>[[#{greenCity.events.page.add.event}]]</h2>
@@ -123,10 +123,10 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="invitees">Invitees:</label>
+                    <label for="invitees">[[#{greenCity.event.invitees}]] :</label>
                     <select id="invitees" class="form-control" required>
-                        <option value="Friends">Friends</option>
-                        <option value="All">All</option>
+                        <option value="Friends">[[#{greenCity.event.invitees.friends}]]</option>
+                        <option value="All">[[#{greenCity.event.invitees.all}]]</option>
                     </select>
                     <p id="invitees-error" class="form-error" style="display: none;"></p>
                 </div>
@@ -147,8 +147,8 @@
 
         <div class="form-group mt-4">
             <input type="button" class="btn btn-danger" id="cancelButton" th:value="#{greenCity.pages.popup.cancel.}">
-            <input type="button" class="btn btn-info btn-primary" value="Preview" id="previewBtn">
-            <input type="button" class="btn btn-success btn-success" value="Add" id="submitBtn">
+            <input type="button" class="btn btn-info btn-primary" th:value="#{greenCity.pages.popup.preview.}" id="previewBtn">
+            <input type="button" class="btn btn-success btn-success" th:value="#{greenCity.pages.popup.add.}" id="submitBtn">
         </div>
     </form>
     <div id="footer" th:insert="core/footer"></div>
@@ -156,6 +156,7 @@
     <div th:replace="core/fragments/modals/preview-event-modal.html"></div>
     <div th:replace="core/fragments/modals/confirmation-modal.html"></div>
 </div>
+
 <script th:inline="javascript">
     const backendAddress = /*[[${backendAddress}]]*/;
     const quill = initializeQuilEditor();
