add front-end for sorting and filtering eco news

--- a/core/src/main/resources/static/management/css/table_Modal_Pagination.css
+++ b/core/src/main/resources/static/management/css/table_Modal_Pagination.css
@@ -1769,3 +1769,88 @@ a.lightgrey {
     display: flex;
     justify-content: space-between;
 }
+
+.filter-container {
+    background-color: #ffffff;
+    border: 1px solid #9CA7B0;
+    border-bottom-right-radius: 5px;
+    border-bottom-left-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
+    position: absolute;
+    top: 100%;
+    margin-left: -10px;
+}
+.filter-container__sorting input {
+    display: inline;
+    position: absolute;
+}
+
+.filter-container__sorting input[type="radio"] {
+    opacity: 0.01;
+    z-index: 100;
+}
+
+.filter-container__sorting input[type="radio"]:checked+label,
+.Checked+label {
+    border: 1px solid #13AA57;
+    background-color: #13AA57;
+    color: #ffffff;
+}
+
+.filter-container__sorting label {
+    border: 1px solid #13AA57;
+    background-color: #ffffff;
+    color: #13AA57;
+    border-radius: 5px;
+    width: 175px;
+    height: 40px;
+    padding: 5px;
+    cursor: pointer;
+    font-size: 14px;
+    font-weight: 600;
+    text-align: center;
+}
+
+.filter-container__search {
+    align-self: stretch;
+    position: relative;
+    display: inline-block;
+    width: 100%;
+}
+
+.filter-container__search .form-search {
+    width: 100%;
+    padding-right: 30px; /* Add padding to the right to make space for the icon */
+    box-sizing: border-box;
+}
+
+.filter-container__search .search-icon {
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    transform: translateY(-40%);
+    color: #9CA7B0;
+}
+
+.filter-container__search .material-icons {
+    font-size: 20px;
+}
+
+.filter-container__buttons {
+    align-self: flex-end;
+}
+
+.filter-container__buttons input {
+    margin-top: .5rem;
+}
+
+.filter-container__buttons .btn-secondary {
+    width: 98px;
+}
+
+.table-filter-icon.active {
+    background-image: url("/img/filter-icon-active.svg");
+}
